--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,24 @@ include:
     file:
       - '/package_manager/.composer.yml'
 
+pint (merge request):
+  extends:
+    - .composer-install
+  variables:
+    PHP_VERSION: '8.5'
+    FOLDER_TO_RUN_COMPOSER: './'
+    COMPOSER_FOLDER: './vendor/'
+    COMPOSER_PARAMETERS: '--optimize-autoloader --no-interaction'
+  cache:
+    key: ${CI_COMMIT_REF_SLUG}-85
+    paths:
+      - ${COMPOSER_FOLDER}
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+  script:
+    - !reference [.composer-install, script]
+    - ./vendor/bin/pint --test
+
 unit tests php8.5:
   extends:
     - .composer-install
