ci: update GitLab CI configuration to add test and deploy stages 🚀

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,12 @@ include:
     file:
       - '/package_manager/.composer.yml'
 
+stages:
+  - test
+  - deploy
+
 pint:
+  stage: test
   extends:
     - .composer-install
   variables:
@@ -22,9 +27,14 @@ pint:
     - ./vendor/bin/pint --test
 
 unit tests php8.5:
+  stage: test
   extends:
     - .composer-install
   variables:
+    PHP_VERSION: '8.5'
+    FOLDER_TO_RUN_COMPOSER: './'
+    COMPOSER_FOLDER: './vendor/'
+    COMPOSER_PARAMETERS: '--optimize-autoloader --no-interaction'
   cache:
     key: ${CI_COMMIT_REF_SLUG}-85
     paths:
