test: add API key selection tests and transport key configuration test
Added tests to ensure correct API key usage based on endpoint type (`general`, `send`, `transport`). Updated documentation with detailed environment variable setup and functionality.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,13 @@
+# This file is used only for local development of this package repository.
+# It is not copied automatically into applications that install the package.
+
 HYVOR_RELAY_API_KEY="<your_api_key_here>"
 HYVOR_RELAY_ENDPOINT="https://relay.hyvor.com"
+
+# Optional overrides for local package development:
+# HYVOR_RELAY_API_KEY_GENERAL="<general_console_api_key>"
+# HYVOR_RELAY_API_KEY_SEND="<sends_api_key>"
+# HYVOR_RELAY_API_KEY_TRANSPORT="<mail_transport_api_key>"
+# HYVOR_RELAY_TIMEOUT=10
+# HYVOR_RELAY_CONNECT_TIMEOUT=5
+# HYVOR_RELAY_WEBHOOK_SECRET="<webhook_secret>"
