docs(config): update API key variable names and improve documentation
Standardized API key environment variables (`HYVOR_RELAY_API_KEY_GENERAL` as base key). Updated references across config, documentation, and examples for clarity. Removed deprecated `HYVOR_RELAY_API_KEY` usage.

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # This file is used only for local development of this package repository.
 # It is not copied automatically into applications that install the package.
 
-HYVOR_RELAY_API_KEY="<your_api_key_here>"
+HYVOR_RELAY_API_KEY_GENERAL="<your_api_key_here>"
 HYVOR_RELAY_ENDPOINT="https://relay.hyvor.com"
 
 # Optional overrides for local package development:
